# hyper-retrieval

./: .gitignore  .mcp.json  BENCHMARK_REPORT.md  CLAUDE.md  PUBLISH.md  README.md  SKILL.md  config.example.yaml  demo_server_v6.py  guardian_rules.yaml  mcp-registry.yaml  pyproject.toml  research_sota_2024_2026.md  retrieval_engine.py  tools.py
.cursor/: bugbot.json
.github/agents/: hyperretrieval.agent.md
.github/workflows/: guardian-lite.yml  guardian.yml
.mcp-registry/: server.json
apps/chat/: demo_server_v6.py
apps/chat/.chainlit/: config.toml
apps/chat/public/: style.css  theme.json
apps/cli/: demo.py  guardian_init.py  pr_analyzer.py
config/: author_aliases.example.yaml
demo/: fixture_pci_violation.py
docs/: copilot-setup.md
guardrails/: comment_code_checker.py  llm_alignment_checker.py
plugins/cursor/: README.md  init.py  manifest.json  server.py
serve/: demo_server_v6.py  embed_server.py  guard_integration.py  guardrail_autosurface.py  mcp_server.py  pr_analyzer.py  quantized_loader.py  query_classifier.py  requirements_index.py  reranker.py  retrieval_engine.py  retrieval_engine.py.bak
serve/public/: style.css  theme.json
tests/: bench_blast_radius_recall.py  chat_50_questions.json  run_chat_eval.py  test_01_artifacts.py  test_03_canary.py  test_04_retrieval_accuracy.py  test_06_auto_eval.py  test_07_author_aliases.py  test_chat_auto_surface.py  test_criticality_boost.py  test_guard_bundled.py  test_guard_fintech_patterns.py  test_guardrail_mcp_tools.py  test_llm_alignment.py  test_lore_signals.py  test_query_classifier.py  test_reranker_scaffold.py
