[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ripple"
version = "0.6.0"
description = "Self-hosted codebase intelligence platform — graph + vector indexing with MCP tools for IDE-embedded LLMs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Amit", email = "amitshukla2308@gmail.com" },
]
keywords = ["codebase-intelligence", "code-search", "mcp", "rag", "blast-radius"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0",
    "networkx>=3.0",
    "numpy>=1.24",
    "lancedb>=0.4",
    "pyarrow>=14.0",
    "ijson>=3.2",
    "sentence-transformers>=2.2",
    "torch>=2.0",
    "tree-sitter>=0.21",
    "rich>=13.0",
    "requests>=2.31",
    "aiosqlite>=0.19",
]

[project.optional-dependencies]
# Full build pipeline (graph clustering, statistics, scatter plots)
build = [
    "leidenalg>=0.10",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "umap-learn>=0.5",
]
# Tree-sitter grammars (add more as needed)
grammars = [
    "tree-sitter-haskell>=0.21",
    "tree-sitter-rust>=0.21",
    "tree-sitter-groovy>=0.21",
]
# Chat UI
chat = [
    "chainlit>=1.0",
]
# MCP server for IDE integration
mcp = [
    "mcp>=0.9",
]
# Additional embedding providers
embeddings = [
    "cohere>=5.0",
    "voyageai>=0.2",
]
# Search extras
search = [
    "rank-bm25>=0.2",
]
# Web tools (for CLI)
web = [
    "playwright>=1.40",
]
# Everything
all = [
    "ripple[build,grammars,chat,mcp,embeddings,search,web]",
]

[project.scripts]
ripple = "apps.cli.hrcode:main"
ripple-mcp = "serve.mcp_server:main"
hr-embed = "serve.embed_server:main"
hr-pr = "apps.cli.pr_analyzer:main"

[project.urls]
Homepage = "https://carlsbert.tunnelthemvp.in/journal/"
Documentation = "https://github.com/Amitshukla2308/Index-the-code#readme"
Repository = "https://github.com/Amitshukla2308/Index-the-code"
Issues = "https://github.com/Amitshukla2308/Index-the-code/issues"

[tool.hatch.build.targets.wheel]
packages = ["build", "serve", "apps", "plugins", "tools"]
